@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 14, 2009</p>
+      <p>Last Updated: March 17, 2009</p>
     </td>
   </tr>
 </table>
@@ -1349,6 +1349,7 @@ nuttx-0.4.4 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* examples/nsh:  A debug option was left on that can (and does) cause
 	  infinite loops and stack overflows.
 	* net/uip: Correct calculation of checksum on ICMP ping response.
+	* examples/dchpd: Added a tiny DHCP server example
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
